<resources>
    <string name="app_name">Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Display preferences</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="header_movie_release_date">Release Date</string>
    <string name="header_movie_vote_average">User Rating</string>
    <string name="header_movie_synopsis">The Plot</string>
    <string name="header_movie_reviews">Reviews</string>

    <string name="description_movie_poster_image">Movie poster image</string>


    <!-- settings strings -->

    <string name="prefs_title_sort_order">Sort order</string>
    <string name="prefs_key_sort_order">sort_order</string>
    <string name="prefs_default_sort_order">popular</string>

    <string-array name="prefs_entries_sort_order">
        <item>Sort by popularity</item>
        <item>Sort by rating</item>
    </string-array>

    <string-array name="prefs_entry_values_sort_order">
        <item>popular</item>
        <item>top_rated</item>
    </string-array>

    <string-array name="sort_order_menu_values">
        <item>Popular</item>
        <item>Top rated</item>
        <item>Favorites</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
