<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.justinraczak.android.movies.MovieDetail"
    android:background="@color/primary_text">


    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:id="@+id/movie_title"
            android:text="Test"
            android:textSize="24sp"
            android:textColor="@color/icons"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster_image"
                android:src="@drawable/imgres"
                android:contentDescription="@string/description_movie_poster_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/movie_detail_linear_layout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_movie_release_date"
                    android:text="@string/header_movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/icons"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="2015"
                    android:textColor="@color/icons"/>

                <TextView
                    android:id="@+id/header_movie_vote_average"
                    android:text="@string/header_movie_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/icons"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/movie_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="Rated 5.4 out of 10"
                    android:textColor="@color/icons"/>

                <Button
                    android:id="@+id/favorite_movie_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:minHeight="48dp"
                    android:text="ADD TO FAVORITES"
                    android:background="@color/secondary_text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/header_movie_synopsis"
                android:text="@string/header_movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/icons"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bounty hunters seek shelter from a raging blizzard and get caught up in a plot of betrayal and deception."
                android:textColor="@color/icons"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reviews_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/header_movie_reviews"
                android:text="@string/header_movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/icons"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>